--- a/style/scss/_card.scss
+++ b/style/scss/_card.scss
@@ -14,7 +14,7 @@
 
     overflow: hidden;
 
-
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     @media (min-width: 800px) {
         flex-direction: row;
