--- a/style/css/style.css
+++ b/style/css/style.css
@@ -12,6 +12,7 @@
   max-width: 408.75px;
   width: 87.2vw;
   overflow: hidden;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 @media (min-width: 800px) {
   .card {
